--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
+spring.datasource.url=jdbc:postgresql://localhost:5432/EmployeeManager
+spring.datasource.username=postgres
+spring.datasource.password=Emir423423.a
 
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.show-sql=true
